--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.1.2",
+    "@tabler/icons-react": "^3.30.0",
     "clsx": "^2.1.1",
-    "motion": "^12.4.1",
+    "motion": "^12.4.3",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-element-to-jsx-string": "^17.0.0",
     "tailwind-merge": "^3.0.1"
   },
   "devDependencies": {
