--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-label": "^2.1.2",
     "@tabler/icons-react": "^3.30.0",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.475.0",
     "motion": "^12.4.3",
     "next": "15.1.6",
     "react": "^19.0.0",
