--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
   "dependencies": {
     "@radix-ui/react-label": "^2.1.2",
     "@tabler/icons-react": "^3.30.0",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@vercel/speed-insights": "^1.2.0",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
     "lucide-react": "^0.475.0",
     "motion": "^12.4.3",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-element-to-jsx-string": "^17.0.0",
-    "tailwind-merge": "^3.0.1"
+    "react-syntax-highlighter": "^15.6.1",
+    "tailwind-merge": "^3.0.1",
+    "together-ai": "^0.13.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -31,5 +35,8 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "overrides": {
+    "react-syntax-highlighter": "15.0.0"
   }
 }
